--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -3,4 +3,6 @@
         <img src="./assets/img/githubpicture.png">
     </div>
     <h1>{{ site.title }}</h1>
+    <h2>Sophomore in Computer Science, looking for an internship for the Summer of 2021.</h2>
+    <h2>Languages: Java, Python, Javascript, React, React Native </h2>
 </div>
