--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,4 +1,4 @@
-<h2>Work Exeperience</h2>  <!-- Work Experience -->
+<h2>Work Experience</h2>  <!-- Work Experience -->
 <div class="card-container">
     {% for item in site.data.experience %}
     <div class="card">
